Remove tasks, use matrix instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,15 @@ on: [push, pull_request]
 name: Continuous integration
 
 jobs:
-  check-stable:
+  check:
     name: Check
     runs-on: ubuntu-latest
     strategy:
       matrix:
         rust:
           - stable
+          - nightly
+          - 1.54
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
@@ -28,6 +30,7 @@ jobs:
         rust:
           - stable
           - nightly
+          - 1.54
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
@@ -75,38 +78,3 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
-  
-  check-msrv:
-    name: Check (MSRC)
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust:
-          - 1.54
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
-
-  test-msrv:
-    name: Test Suite (MSRV)
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust:
-          - stable
-          - nightly
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
