Add keywords and categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "https://github.com/scrabsha/dep-doc/blob/main/README.md"
 homepage = "https://github.com/scrabsha/dep-doc"
 repository = "https://github.com/scrabsha/dep-doc"
 license = "MIT OR Apache-2.0"
-# TODO: keywords
-# TODO: categories
+keywords = ["dependency", "documentation"]
+categories = ["development-tools"]
 
 [dependencies]
